resources/manifest/videojuego_service_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vjs-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.nuup.ninja
      http:
        paths:
          - path: /api/videojuego
            pathType: Prefix
            backend:
              service:
                name: vj-service-srv
                port:
                  number: 8084
